--- a/index.html
+++ b/index.html
@@ -298,4 +298,6 @@
 
   <script src="app.js"></script>
 </body>
+  <link rel="apple-touch-icon" href="icon-180.png">
+<link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
 </html>
